--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
 
     <div class="compra">
         <input type="submit" value="COMPRA YA!"></button>
-        
+      
+    </div>
+    <div>
+        <a class="parcial" href="primerparcial/primerparcial.html">IR AL EJERCIO PRIMER PARCIAL</a>
     </div>
 
 
